# homework_01

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: lib.h  version.h.in
src/: cli.cpp  lib.cpp  test.cpp
